--- a/Cookie clicker/style.css
+++ b/Cookie clicker/style.css
@@ -304,37 +304,33 @@ body {
     height: 140px;
 }
 
-.rain {
+/* Regendruppels */
+.raindrop {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 2px;
+    height: 15px;
+    background: linear-gradient(to bottom, rgba(173, 216, 230, 0.8), rgba(135, 206, 235, 0.9));
+    border-radius: 0 0 50% 50%;
+    animation: rainFall 1s linear infinite;
     pointer-events: none;
-}
-
-.rain1 {
-    background: linear-gradient(to bottom, transparent, rgba(173, 216, 230, 0.3));
-    background-size: 15px 80px;
-    animation: rain 0.4s linear infinite;
-    opacity: 0.8;
-}
-
-.rain2 {
-    background: linear-gradient(to bottom, transparent, rgba(135, 206, 235, 0.2));
-    background-size: 25px 120px;
-    animation: rain 0.6s linear infinite;
-    opacity: 0.6;
-    animation-delay: -0.2s;
-}
-
-.rain3 {
-    background: linear-gradient(to bottom, transparent, rgba(176, 224, 230, 0.25));
-    background-size: 18px 90px;
-    animation: rain 0.5s linear infinite;
     opacity: 0.7;
-    animation-delay: -0.4s;
 }
+
+.raindrop1 { left: 5%; animation-delay: 0s; animation-duration: 0.8s; }
+.raindrop2 { left: 12%; animation-delay: 0.1s; animation-duration: 1.2s; }
+.raindrop3 { left: 18%; animation-delay: 0.3s; animation-duration: 0.9s; }
+.raindrop4 { left: 25%; animation-delay: 0.5s; animation-duration: 1.1s; }
+.raindrop5 { left: 32%; animation-delay: 0.2s; animation-duration: 1.0s; }
+.raindrop6 { left: 40%; animation-delay: 0.7s; animation-duration: 0.85s; }
+.raindrop7 { left: 47%; animation-delay: 0.4s; animation-duration: 1.15s; }
+.raindrop8 { left: 55%; animation-delay: 0.6s; animation-duration: 0.95s; }
+.raindrop9 { left: 62%; animation-delay: 0.8s; animation-duration: 1.05s; }
+.raindrop10 { left: 70%; animation-delay: 0.1s; animation-duration: 0.9s; }
+.raindrop11 { left: 77%; animation-delay: 0.9s; animation-duration: 1.3s; }
+.raindrop12 { left: 85%; animation-delay: 0.3s; animation-duration: 0.8s; }
+.raindrop13 { left: 92%; animation-delay: 0.5s; animation-duration: 1.1s; }
+.raindrop14 { left: 8%; animation-delay: 0.7s; animation-duration: 1.0s; }
+.raindrop15 { left: 95%; animation-delay: 0.2s; animation-duration: 0.9s; }
 
 .storm-fog {
     position: absolute;
@@ -387,12 +383,20 @@ body {
     }
 }
 
-@keyframes rain {
+@keyframes rainFall {
     0% {
-        background-position: 0 0;
+        top: -20px;
+        opacity: 0;
+    }
+    10% {
+        opacity: 0.7;
+    }
+    90% {
+        opacity: 0.7;
     }
     100% {
-        background-position: 0 100px;
+        top: 100vh;
+        opacity: 0;
     }
 }
 
@@ -548,6 +552,111 @@ body {
     left: 95%;
     animation: shootingStar 4.8s linear infinite;
     animation-delay: 10s;
+}
+
+.shooting-star6 {
+    top: 8%;
+    left: 70%;
+    animation: shootingStar 5.2s linear infinite;
+    animation-delay: 2s;
+}
+
+.shooting-star7 {
+    top: 25%;
+    left: 88%;
+    animation: shootingStar 4.3s linear infinite;
+    animation-delay: 4s;
+}
+
+.shooting-star8 {
+    top: 18%;
+    left: 92%;
+    animation: shootingStar 5.8s linear infinite;
+    animation-delay: 7s;
+}
+
+.shooting-star9 {
+    top: 6%;
+    left: 82%;
+    animation: shootingStar 4.7s linear infinite;
+    animation-delay: 9s;
+}
+
+.shooting-star10 {
+    top: 22%;
+    left: 78%;
+    animation: shootingStar 5.1s linear infinite;
+    animation-delay: 12s;
+}
+
+.shooting-star11 {
+    top: 14%;
+    left: 86%;
+    animation: shootingStar 4.9s linear infinite;
+    animation-delay: 1.5s;
+}
+
+.shooting-star12 {
+    top: 28%;
+    left: 94%;
+    animation: shootingStar 5.4s linear infinite;
+    animation-delay: 5.5s;
+}
+
+.shooting-star13 {
+    top: 10%;
+    left: 76%;
+    animation: shootingStar 4.6s linear infinite;
+    animation-delay: 8.5s;
+}
+
+.shooting-star14 {
+    top: 16%;
+    left: 90%;
+    animation: shootingStar 5.3s linear infinite;
+    animation-delay: 11.5s;
+}
+
+.shooting-star15 {
+    top: 4%;
+    left: 84%;
+    animation: shootingStar 4.4s linear infinite;
+    animation-delay: 3.5s;
+}
+
+.shooting-star16 {
+    top: 26%;
+    left: 72%;
+    animation: shootingStar 5.6s linear infinite;
+    animation-delay: 6.5s;
+}
+
+.shooting-star17 {
+    top: 20%;
+    left: 96%;
+    animation: shootingStar 4.8s linear infinite;
+    animation-delay: 13s;
+}
+
+.shooting-star18 {
+    top: 7%;
+    left: 74%;
+    animation: shootingStar 5.0s linear infinite;
+    animation-delay: 2.5s;
+}
+
+.shooting-star19 {
+    top: 24%;
+    left: 80%;
+    animation: shootingStar 4.5s linear infinite;
+    animation-delay: 14.5s;
+}
+
+.shooting-star20 {
+    top: 11%;
+    left: 98%;
+    animation: shootingStar 5.7s linear infinite;
+    animation-delay: 0.5s;
 }
 
 @keyframes shootingStar {
